Refer to the correct image...

--- a/.github/workflows/build_and_publish_docker.yml
+++ b/.github/workflows/build_and_publish_docker.yml
@@ -55,7 +55,7 @@ jobs:
         id: scan
         uses: crazy-max/ghaction-container-scan@v2
         with:
-          image: terjekv/docker:latest
+          image: terjekv/bastion:latest
           dockerfile: ./Dockerfile
       -
         name: Upload SARIF file
